--- a/prjinfox/pom.xml
+++ b/prjinfox/pom.xml
@@ -7,10 +7,11 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>database</groupId>
-            <artifactId>mysql</artifactId>
-            <version>1.0</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.2.0</version>
         </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
