--- a/prjinfox/pom.xml
+++ b/prjinfox/pom.xml
@@ -11,7 +11,11 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>rs2xmlGroup</groupId>
+            <artifactId>rs2xml</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
